# publicdata

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  readthedocs.yml
data/0015/: README.md  metadata.yaml
docs/source/: LICENSE.rst  conf.py  index.md
docs/source/datasets/: 0015.md  index.md
