[project]
name = "publicdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "linkify-it-py>=2.0.0",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-togglebutton>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["docs"]
